# essence-logic

./: .gitignore  AI时代项目目录管理最佳实践.md  Dockerfile  MVP评估报告.md  README.md  deploy.config.example.json  deploy.py  dev.sh  export_chat_history.py  pyproject.toml  requirements.txt  restart_server.sh  start.sh  代码审查报告.md  发送消息问题修复报告.md  安全性检查报告.md  日志测试报告.md  查看对话记录.md  查看生产环境对话记录.md  环境变量管理指南.md  系统提示词.md  部署指南.md  重构总结.md  项目经验教训总结.md
backups/: chat_history_export_20260127_192033.json  chat_history_export_20260127_192415.json  chat_history_export_20260127_194328.json  chat_history_merged_20260215_122850.json
docs/: README.md  项目复盘：经验教训总结.md  项目改进建议.md
docs/deployment/: 部署更新流程.md
docs/product/: 产品定义简报.md  反馈功能说明.md
docs/user-guides/: 日志管理最佳实践.md  查看对话记录.md
scripts/: deploy.py  dev.sh  export_chat_history.py  merge_backups.py  push_to_github.sh  restart_server.sh  start.sh  view_chat_history.py
src/: __init__.py  aibuilders_client.py  logger_config.py  main.py  system_prompt.py
static/: index.html
